# sculpt

./: .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/sculpt/: core.py
src/sculpt/hcl/: api.py  parser.py  transformer.py
tests/helpers/terraform-config/: block_names.tf  iam.tf  multiline.tf  multiline_expression.tf  multiline_interpolation.tf  s3.tf  variables.tf
tests/helpers/terraform-config-json/: backend.json  block_names.json  cloudwatch.json  data_sources.json  iam.json  multiline.json  multiline_expression.json  multiline_interpolation.json  null_provider.json  route_table.json  s3.json  variables.json
tests/unit/: test_load.py  test_parse.py
