
[project]
name = "sculpt"
version = "0.1.0"
description = "Simple tool for prototyping boardgames"
authors = [
    {name = "Stanislav Nowak", email = "scolex.cz@gmail.com"},
]
dependencies = [
    "lark>=1.1.7",
    "pycairo>=1.23.0",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
fast = true

[tool.ruff.isort]
known-first-party = ["pdm"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
