
[project]
name = "sculpt"
version = "0.1.0"
description = "Simple tool for prototyping boardgames"
authors = [
    {name = "Stanislav Nowak", email = "scolex.cz@gmail.com"},
]
dependencies = [
    "lark>=1.1.7",
    "pycairo>=1.23.0",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pdm = "sculpt.core:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/sculpt"]
source-includes = ["tests", "CHANGELOG.md", "LICENSE", "README.md"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"

[tool.pdm.scripts]
test = "pytest"
doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
doc = [
    "mkdocs>=1.1",
    "mkdocs-material>=7.3",
    "mkdocstrings[python]>=0.18",
    "mike>=1.1.2",
    "setuptools>=62.3.3",
    "markdown-exec>=0.7.0",
    "mkdocs-redirects>=1.2.0",
]

[tool.black]
line-length = 120
fast = true

[tool.ruff]
line-length = 120
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
exclude = ["tests/fixtures"]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["sculpt"]